--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -66,3 +66,9 @@
     color: #28a745;
 }
 
+
+.title {
+    color: #fff;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+  
