--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@
     <link rel="alternate" type="application/rss+xml" title="RSS" href="https://www.ag2tw.com/feed/en.xml">
     <link rel="alternate" type="application/rss+xml" title="RSS日本語" href="https://www.ag2tw.com/feed/ja.xml">
     <link rel="stylesheet" type="text/css" href="/assets/css/master.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/alien800.png">
     <script>
       MathJax = {
         tex: {
@@ -41,7 +42,13 @@
   </head>
   <body>
     <article class="markdown-body">
-      <nav><a href="/">ag2tw</a></nav>
+      <nav>
+        <span> <strong class="title">AG2tW</strong> </span>
+        <a href="/"><img src="/assets/images/alien.png" alt="" srcset="" width="24px" style="vertical-align: bottom; margin-bottom: 4px; margin-left: 3px;" /></a>
+        <a href="https://github.com/aliens3/AG2tW"><img src="/assets/images/github-Logo.png" alt="" srcset="" width="20px" style="vertical-align: bottom; margin-bottom: 4px; "/></a>
+        <a href="https://github.com/aliens3/AG2tW"><img src="/assets/images/Generic_Feed-icon.svg.png" alt="" srcset="" width="20px" style="vertical-align: bottom; margin-bottom: 4px; "/></a>
+      </nav>
+      <h1>{{page.title}}</h1>
       {{ content }}
     </article>
   </body>
