--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,10 @@
     <script>
       MathJax = {
         tex: {
-          inlineMath: [ ['$', '$'], ['\\(', '\\)'] ]
+          inlineMath: [['$', '$'], ['\\(', '\\)'] ],
+          displayMath: [             // start/end delimiter pairs for display math
+      ['$$', '$$'],
+      ['\\[', '\\]']]
         },
         svg: {
           fontCache: 'global'
@@ -30,12 +33,79 @@
         min-width: 200px;
         max-width: 800px;
         margin: 0 auto;
-        padding: 45px;
+        padding: 45px 35px 45px 34px;
+        font-size: 18px;
+        border-left: 1px dashed rgb(100,100,100);
       }
+      .markdown-body h1 {
+        font-size: 24px;
+        width: fit-content;
+        margin-left: auto;
+        margin-right: auto;
+        border-bottom: none;
+        
+      }
+
+      #header{
+        margin-bottom: 40px;
+      }
+      date {
+        width: fit-content;
+        display: block;
+        margin-right: 0;
+        margin-left: auto;
+        font-size: small;
+        color: #333;
+      }
+
+      .markdown-body h2 {
+        border-bottom: none;
+        font-size: 20px;
+      }
+
+      .markdown-body hr {
+        height: 1px;
+        margin: 20px auto;
+        background-color: rgb(39, 39, 39);
+      }
+
+      imagewrap, retweet, news {
+    display: block;
+    margin: 48px auto;
+    max-width: 450px;
+    }
+
+    imagewrap a {
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+
+    .image-grid {
+                display: grid;
+                grid-gap: 2px;
+                place-items: center;
+                overflow: hidden;
+    }
+
+    .image-grid.two {
+                grid-template-columns: repeat(2, 1fr);
+    }
+
+    .image-grid img {
+        object-fit: cover; /* Crop the image to fit the container */
+        object-position: center; 
+        width: 100%; /* image box size as % of container, see step 1 */
+      height: 100%;
+      border-radius: 4px;
+    }
+
     
       @media (max-width: 767px) {
         .markdown-body {
           padding: 15px;
+          font-size: 16px;
+          border-left: none;
         }
       }
     </style>
@@ -48,8 +118,13 @@
         <a href="https://github.com/aliens3/AG2tW"><img src="/assets/images/github-Logo.png" alt="" srcset="" width="20px" style="vertical-align: bottom; margin-bottom: 4px; "/></a>
         <a href="https://github.com/aliens3/AG2tW"><img src="/assets/images/Generic_Feed-icon.svg.png" alt="" srcset="" width="20px" style="vertical-align: bottom; margin-bottom: 4px; "/></a>
       </nav>
-      <h1>{{page.title}}</h1>
-      {{ content }}
+      <main>
+        <div id="header">
+          <h1>{{page.title}}</h1>
+          <date>{{page.date}}</date>
+        </div>
+        {{ content }}
+      </main>
     </article>
   </body>
 </html>
