--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -46,6 +46,7 @@
         
       }
 
+
       #header{
         margin-bottom: 40px;
       }
@@ -106,6 +107,10 @@
           padding: 15px;
           font-size: 16px;
           border-left: none;
+        }
+
+        .markdown-body h2{
+          font-size: 19px;
         }
       }
     </style>
